# netio

./: .gitignore  README.md  pyproject.toml  sample.toml
netio/: config.py  main.py  parser.py
netio/model/: base_host.py
netio/model/formats/: caddy.py  coredns.py  inadyn.py
