[tool.poetry]
name = "netio"
version = "0.1.0"
description = ""
authors = ["motty <motty.mio2@gmail.com>"]
packages = [{include = "netio"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
